--- a/framework/AndroidManifest.xml
+++ b/framework/AndroidManifest.xml
@@ -21,7 +21,8 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />   
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />   
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />   
+    <uses-permission android:name="android.permission.READ_LOGS" />
     
     <application android:icon="@drawable/icon" android:label="@string/app_name"
     	android:debuggable="true">
